2007-12-31  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs: Fix logic error in last commit that
	  downgraded 2.0 projects to 1.1 projects.

2007-12-31  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs: Make sure that ClrVersion is
	  something that the language binding can handle. Fixes some compilation
	  problems with VB.NET.

2007-12-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectConvertTool.cs: Improve documentation. Add
	  option for printing all available formats.

2007-12-14  Ankit Jain  <jankit@novell.com>

	Fix bug #348107
	* DotNetProject.cs: Quote filenames when passing to al.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Serialization/DataContext.cs,
	  MonoDevelop.Projects.Serialization/ClassDataType.cs,
	  MonoDevelop.Projects.Serialization/ItemProperty.cs: Use alphabetical
	  order when adding properties registered through extensions. This avoids
	  random property order changes when saving project files.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/CombineConfiguration.cs: Change the order of the
	  properties to match the old serialization order.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/CombineEntry.cs,
	  MonoDevelop.Projects/ConvertXml.cs,
	  MonoDevelop.Projects/CustomCommandExtension.cs,
	  MonoDevelop.Projects/Combine.cs, MonoDevelop.Projects/DotNetProject.cs,
	  MonoDevelop.Projects/DefaultFileFormat.cs,
	  MonoDevelop.Projects/BuildTool.cs,
	  MonoDevelop.Projects/CombineConfiguration.cs,
	  MonoDevelop.Projects/Project.cs,
	  MonoDevelop.Projects.Utility/DiffUtility.cs,
	  MonoDevelop.Projects.Extensions/DataTypeCodon.cs,
	  MonoDevelop.Projects.Extensions/ItemPropertyCodon.cs: API cleanup.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
